Update Python base image to 3.13-slim-bullseye
Upgraded the Python base image from 3.9-slim to 3.13-slim-bullseye in both dashboard and worker Dockerfiles for improved performance and security. Also updated file copy instructions in the dashboard Dockerfile to include the static folder.

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -1,5 +1,5 @@
-# Use an official lightweight Python image
-FROM python:3.9-slim
+# Use a slim Python image for a smaller footprint
+FROM python:3.13-slim-bullseye
 
 # Set the working directory inside the container
 WORKDIR /app
@@ -10,14 +10,14 @@ COPY requirements.txt .
 # Install the Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application code and templates into the container
-# Assumes your templates are in a 'templates' folder
+# Copy the application files into the container.
+# This includes the main app, the templates, and the static folder with the logo.
 COPY dashboard_app.py .
-COPY templates/ ./templates/
+COPY templates ./templates/
+COPY static ./static/
 
 # Expose the port the app runs on
 EXPOSE 5000
 
-# Set the command to run the application
-# Use Gunicorn as a production-ready WSGI server
+# The command to run the application using Gunicorn (a production-ready web server)
 CMD ["gunicorn", "--bind", "0.0.0.0:5000", "dashboard_app:app"]
