--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY} # Add a secret key for sessions
+      - PYTHONUNBUFFERED=1 # Force print() statements to appear in logs immediately
     depends_on:
       - db
     volumes:
