--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,17 @@ services:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - POSTGRES_DB=${POSTGRES_DB}
       - FLASK_SECRET_KEY=${FLASK_SECRET_KEY} # Add a secret key for sessions
+      # --- Master Authentication Switch ---
+      - AUTH_ENABLED=${AUTH_ENABLED:-false}
+      # --- OIDC Authentication Settings (Optional) ---
+      - OIDC_ENABLED=${OIDC_ENABLED:-false}
+      - OIDC_ISSUER_URL=${OIDC_ISSUER_URL}
+      - OIDC_CLIENT_ID=${OIDC_CLIENT_ID}
+      - OIDC_CLIENT_SECRET=${OIDC_CLIENT_SECRET}
+      # --- Local Fallback Login (Optional) ---
+      - LOCAL_LOGIN_ENABLED=${LOCAL_LOGIN_ENABLED:-false}
+      - LOCAL_USER=${LOCAL_USER}
+      - LOCAL_PASSWORD=${LOCAL_PASSWORD}
       - PYTHONUNBUFFERED=1 # Force print() statements to appear in logs immediately
     depends_on:
       - db
