--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,6 +20,7 @@ services:
       - OIDC_ISSUER_URL=${OIDC_ISSUER_URL}
       - OIDC_CLIENT_ID=${OIDC_CLIENT_ID}
       - OIDC_CLIENT_SECRET=${OIDC_CLIENT_SECRET}
+      - OIDC_PROVIDER_NAME=${OIDC_PROVIDER_NAME}
       # --- Local Fallback Login (Optional) ---
       - LOCAL_LOGIN_ENABLED=${LOCAL_LOGIN_ENABLED:-false}
       - LOCAL_USER=${LOCAL_USER}
