Add AUTOSTART option for worker auto-processing
Introduces an AUTOSTART environment variable to enable workers to automatically start processing jobs without manual intervention. Updates README and docker-compose.yml with documentation and configuration details, and modifies transcode.py to support the new behavior.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,8 @@ services:
       - DASHBOARD_URL=http://dashboard:5000
       # --- General Settings ---
       - TZ=${TZ:-UTC} # Set the container timezone, e.g., 'Australia/Sydney'
+      # --- Worker Behavior ---
+      - AUTOSTART=${AUTOSTART:-false} # If true, worker starts processing jobs immediately
     volumes:
       - ./media:/media
     # The command is now defined in the worker/Dockerfile
