Refine worker autostart and update Docker workflows
Worker now forces 'running' state on first loop when autostart is enabled, preventing idle state override from the database. Docker publish workflows now trigger only on changes within their respective directories.

--- a/.github/workflows/docker-publish-worker.yml
+++ b/.github/workflows/docker-publish-worker.yml
@@ -3,6 +3,8 @@ name: Publish Worker Docker Image
 on:
   push:
     branches: [ "develop" ]
+    paths:
+      - 'worker/**'
   release:
     types: [ created ]
 
