Refactor Docker setup and add DB initialization
Updated Dockerfile and docker-compose.yml for improved build context and health checks. Added init.sql for database schema and default settings initialization. Created worker/init_db.py as a placeholder for future database initialization logic.

--- a/dashboard/Dockerfile
+++ b/dashboard/Dockerfile
@@ -4,17 +4,15 @@ FROM python:3.13-slim-bullseye
 # Set the working directory inside the container
 WORKDIR /app
 
-# Copy the requirements file into the container
-COPY requirements.txt .
+# Copy the requirements file from the dashboard directory
+COPY dashboard/requirements.txt .
 
 # Install the Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the application files into the container.
-# This includes the main app, the templates, and the static folder with the logo.
-COPY dashboard_app.py .
-COPY templates ./templates/
-COPY static ./static/
+# Copy the entire dashboard directory and the root VERSION.txt file
+COPY dashboard/ .
+COPY VERSION.txt .
 
 # Expose the port the app runs on
 EXPOSE 5000
