--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ version: '3.8'
 services:
   # The Flask web dashboard service
   dashboard:
-    build: ./dashboard # Build from the dashboard directory
+    build:
+      context: .
+      dockerfile: ./dashboard/Dockerfile
     restart: unless-stopped
     ports:
       - "5000:5000"
@@ -32,17 +34,21 @@ services:
       # --- Force print() statements to appear in logs immediately ---
       - PYTHONUNBUFFERED=1
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     volumes:
       - ./media:/media
     # The command is now defined in the dashboard/Dockerfile
 
   # The transcoding worker service
   worker:
-    build: ./worker # Build from the worker directory
+    build:
+      context: .
+      dockerfile: ./worker/Dockerfile
     restart: unless-stopped # or "on-failure" if you prefer
     depends_on:
-      - db
+      db:
+        condition: service_healthy
     environment:
       - DB_HOST=db
       - DB_USER=${POSTGRES_USER}
@@ -63,11 +69,17 @@ services:
     image: postgres:13
     restart: unless-stopped
     volumes:
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
       - postgres_data:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=${POSTGRES_DB}
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
