Update Docker build contexts and version retrieval logic
Docker workflow files now set the build context to the project root and explicitly specify Dockerfile locations for dashboard and worker images. The dashboard and worker apps now read VERSION.txt from the current directory, with improved fallback logic for local development. Worker version is now dynamically loaded from VERSION.txt instead of being hardcoded.

--- a/.github/workflows/docker-publish-worker.yml
+++ b/.github/workflows/docker-publish-worker.yml
@@ -44,7 +44,10 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
-          context: ./worker
+          # Set the context to the project root
+          context: .
+          # Specify the location of the Dockerfile
+          file: ./worker/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
