--- a/.env
+++ b/.env
@@ -1,3 +1,15 @@
-POSTGRES_DB=transcode_cluster
-POSTGRES_USER=transcode
-POSTGRES_PASSWORD=your_very_secure_password
+DB_HOST=db
+DB_USER=transcode
+DB_PASSWORD=password
+DB_NAME=transcode_cluster
+FLASK_SECRET_KEY='dSxxYYO^52IwgDy%(SVO3'
+AUTH_ENABLED=true
+OIDC_ENABLED=true
+OIDC_ISSUER_URL=
+OIDC_CLIENT_ID=
+OIDC_CLIENT_SECRET=
+LOCAL_LOGIN_ENABLED=true
+LOCAL_USER=michael
+LOCAL_PASSWORD=c2tpdHprYXQtMTM=
+PYTHONUNBUFFERED=1
+DEVMODE=true
