--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,8 @@ services:
       - LOCAL_LOGIN_ENABLED=${LOCAL_LOGIN_ENABLED:-false}
       - LOCAL_USER=${LOCAL_USER}
       - LOCAL_PASSWORD=${LOCAL_PASSWORD}
+      # --- Development Mode ---
+      - DEVMODE=${DEVMODE:-false} # Set to 'true' to bypass auth for local IPs
       # --- Force print() statements to appear in logs immediately ---
       - PYTHONUNBUFFERED=1
     depends_on:
@@ -75,7 +77,7 @@ services:
       - POSTGRES_USER=${DB_USER}
       - POSTGRES_PASSWORD=${DB_PASSWORD}
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      test: ["CMD", "pg_isready", "-U", "${POSTGRES_USER:-transcode}", "-d", "${POSTGRES_DB:-transcode_cluster}"]
       interval: 5s
       timeout: 5s
       retries: 5
