--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -64,6 +64,7 @@ services:
       - AUTOSTART=${AUTOSTART:-false} # If true, worker starts processing jobs immediately
     volumes:
       - ./media:/media
+    hostname: worker-1
     # The command is now defined in the worker/Dockerfile
 
   # The PostgreSQL database service
