Refactor Sonarr scan logic and UI, fix startup race
Reorganized Sonarr scan job handling to support queue-based approval or direct API renaming, refactored all inline JavaScript into a dedicated app.js file, and fixed a critical startup race condition by synchronizing background threads with database migrations. Added missing modal templates to resolve Jinja2 errors, improved Sonarr scan UI feedback and progress bar logic, and corrected a recurring indentation error in dashboard_app.py. Updated changelog and version for release.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -38,6 +38,12 @@ services:
     depends_on:
       db:
         condition: service_healthy
+    healthcheck: # This check now waits for the database to be fully initialized
+      test: ["CMD", "curl", "-f", "http://localhost:5000/api/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
     volumes:
       - ./media:/media
     # The command is now defined in the dashboard/Dockerfile
@@ -50,6 +56,8 @@ services:
     restart: unless-stopped # or "on-failure" if you prefer
     depends_on:
       db:
+        condition: service_healthy
+      dashboard:
         condition: service_healthy
     environment:
       - DB_HOST=db
