--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   # The Flask web dashboard service
   dashboard:
-    image: ghcr.io/m1ckyb/librarrarian-dashboard:0.10.12
+    image: ghcr.io/m1ckyb/librarrarian-dashboard:0.11.0
     restart: unless-stopped
     ports:
       - "5000:5000"
@@ -48,8 +48,21 @@ services:
 
   # The transcoding worker service
   worker:
-    image: ghcr.io/m1ckyb/librarrarian-worker:0.10.12
+    image: ghcr.io/m1ckyb/librarrarian-worker:0.11.0
     restart: unless-stopped # or "on-failure" if you prefer
+    devices:
+      - /dev/dri:/dev/dri # For hardware acceleration (optional)    
+    #nvenc: # Enable NVIDIA GPU support
+    #  deploy:
+    #    resources:
+    #      reservations:
+    #        devices:
+    #          - driver: nvidia
+    #            count: 1
+    #            capabilities:
+    #              - gpu
+    #              - compute
+    #              - video      
     depends_on:
       db: # Depends on the database being ready
         condition: service_healthy
