--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,10 @@ version: '3.8'
 
 services:
   # The Flask web dashboard service
-  dashboard:
-    image: ghcr.io/m1ckyb/librarrarian-dashboard:0.11.2
+  librarrarian:
+    image: ghcr.io/m1ckyb/librarrarian-dashboard:0.11.2 #latest production version
+    #image: ghcr.io/m1ckyb/librarrarian-dashboard:develop #latest develop version
+    container_name: librarrarian
     restart: unless-stopped
     ports:
       - "5000:5000"
@@ -47,8 +49,11 @@ services:
     # The command is now defined in the dashboard/Dockerfile
 
   # The transcoding worker service
-  worker:
-    image: ghcr.io/m1ckyb/librarrarian-worker:0.11.2
+  librarrarian-worker-1:
+    image: ghcr.io/m1ckyb/librarrarian-worker:0.11.2 #latest production version
+    #image: ghcr.io/m1ckyb/librarrarian-worker:develop #latest develop version
+    container_name: librarrarian-worker-1 #only 1 worker, can change to just librarrarian-worker
+    hostname: librarrarian-worker-1 #only 1 worker, can change to just librarrarian-worker   
     restart: unless-stopped # or "on-failure" if you prefer
     devices:
       - /dev/dri:/dev/dri # For hardware acceleration (optional)    
@@ -85,7 +90,7 @@ services:
 
   # The PostgreSQL database service
   db:
-    image: postgres:16
+    image: postgres:16-alpine
     restart: unless-stopped
     volumes:
       - postgres_data:/var/lib/postgresql/data
