Update service dependencies in docker-compose file

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -60,7 +60,7 @@ services:
     depends_on:
       db:
         condition: service_healthy
-      dashboard:
+      librarrarian: # Also depends on the dashboard being healthy
         condition: service_healthy
     environment:
       - DB_HOST=db
