Add passkey login visibility check and UI tweaks
Login page now only shows the 'Login with Passkey' button if passkey authentication is enabled and passkeys exist in the database, preventing confusion on fresh installs. Updated passkey credential encoding to use URL-safe base64. Improved passkey management modal button spacing and relocated user settings icon in the navbar. Fixed database initialization to ensure passkey table creation. Updated docker-compose files and version references for 0.13.2 release.

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -35,13 +35,12 @@ services:
       - LOCAL_PASSWORD=${LOCAL_PASSWORD}
       # --- Development Mode ---
       - DEVMODE=${DEVMODE:-false} # Set to 'true' to bypass auth for local IPs
-      # --- Passkey/WebAuthn Authentication (Optional) ---
-      - PASSKEY_ENABLED=${PASSKEY_ENABLED:-false}
+      # --- Force print() statements to appear in logs immediately ---
+      - PYTHONUNBUFFERED=1
+      - PASSKEY_ENABLED=${PASSKEY_ENABLED:-true}
       - WEBAUTHN_RP_ID=${WEBAUTHN_RP_ID:-localhost}
       - WEBAUTHN_RP_NAME=${WEBAUTHN_RP_NAME:-Librarrarian}
       - WEBAUTHN_ORIGIN=${WEBAUTHN_ORIGIN:-http://localhost:5000}
-      # --- Force print() statements to appear in logs immediately ---
-      - PYTHONUNBUFFERED=1
     depends_on:
       db:
         condition: service_healthy
